Fixed anchor legibility on issue header

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -29,6 +29,13 @@
 }
 
 // styles
+@mixin anchor-inverted {
+	color: $color-medium;
+	&:hover {
+		color: white;
+		text-decoration: none;
+	}
+}
 @mixin button {
 	display: inline-block;
 	vertical-align: baseline;
